Format files - Change SimSiam - Upload tests
Reformat some files by adding personal comment notes
Make SimSiam 3-layer MLP
Upload variety of long experiment outputs & images
Tried Albumentations but didn't speed up much the SSL process and didn't work out with current dataset subset masking.

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Notebook for SSFL mostly\n",
     "import glob\n",
     "import os\n",
-    "from typing import List, Tuple, Optional, Dict\n",
+    "from typing import List, Tuple, Optional, Dict, OrderedDict\n",
     "import pickle\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,30 +28,84 @@
     "import time\n",
     "import random\n",
     "from linear_cka import linear_CKA_fast\n",
-    "from centr_utils import plot_results_SSL_csv"
+    "from centr_utils import plot_results_SSL_csv\n",
+    "from model import SimSiam, CustomSubset\n",
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_config_fn(server_round: int):\n",
+    "    config_res = {}\n",
+    "    base_lr = 0.04\n",
+    "    batch_size = 128\n",
+    "    init_lr = base_lr * batch_size / 256\n",
+    "    warm_up_rounds = 10\n",
+    "    cos_decay = True\n",
+    "    if server_round < warm_up_rounds:\n",
+    "        # Linearly interpolate the learning rate during warm-up rounds\n",
+    "        cur_lr = np.linspace(0, init_lr, warm_up_rounds)[server_round]\n",
+    "        print(cur_lr)\n",
+    "    else:\n",
+    "        # Apply cosine decay after warm-up rounds\n",
+    "        if cos_decay:\n",
+    "            n_rounds = 800\n",
+    "            cur_lr = init_lr * 0.5 * (1. + math.cos(math.pi * (server_round - warm_up_rounds) / (n_rounds - warm_up_rounds)))\n",
+    "        else:\n",
+    "            cur_lr = base_lr\n",
+    "    \n",
+    "    config_res[\"lr\"] = cur_lr\n",
+    "    config_res[\"server_round\"] = server_round\n",
+    "    config_res[\"arr\"] = [2, 7, 9]\n",
+    "    return config_res \n",
+    "\n",
+    "lrs = []\n",
+    "for server_round in range(150):\n",
+    "    config_res = fit_config_fn(server_round=server_round)\n",
+    "    lrs.append(config_res[\"lr\"])\n",
+    "    # print(lrs[-1])\n",
+    "print(config_res[\"arr\"])\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(lrs)\n",
+    "plt.title('Learning Rate Schedule')\n",
+    "plt.xlabel('Server Round')\n",
+    "plt.ylabel('Learning Rate')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "new(): data must be a sequence (got float)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m loss1 \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFloatTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.22\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: new(): data must be a sequence (got float)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n"
      ]
     }
    ],
    "source": [
     "# loss1 = float\n",
-    "# .npz kai .pt cross checkpoint loading na dw"
+    "import torch.nn as nn\n",
+    "# .npz kai .pt cross checkpoint loading na dw\n",
+    "model = SimSiam() #backbone=ResNet18().resnet, hidden_dim=2048, pred_dim=512, output_dim=2048\n",
+    "print(len([p for p in SimSiam().state_dict()]))\n",
+    "# print(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
