Upload some images results of experiments

--- a/visual.ipynb
+++ b/visual.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stavrosmpoul/miniconda3/envs/pyt_flwr/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-06-05 11:24:30,475\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import os\n",
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +63,12 @@
     "    # Extracting required columns\n",
     "    try:\n",
     "        round_values = df['round']\n",
+    "        round_values = np.arange(len(round_values)) # aritificial warm start\n",
     "        test_accuracy = df['test_accuracy']\n",
     "        test, te_r = np.max(test_accuracy), np.argmax(test_accuracy)\n",
+    "        # top4_indices = np.argsort(test_accuracy)[-4:][::-1]\n",
+    "        # top4_values = test_accuracy[top4_indices]\n",
+    "        # for test, te_r in zip(top4_values, top4_indices):\n",
     "        print(f\"Best accuracy on (accuracy,round):  \\nTest-({test},{te_r})\")\n",
     "        # print(config_data)\n",
     "        if config_data['partitioning'] == 'dirichlet':\n",
@@ -81,20 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "outputs/2024-05-24/09-35-28/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=1_R=1.csv\n",
+      "7\n",
       "outputs/2024-05-24/09-28-46/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=3_R=1.csv\n",
       "outputs/2024-05-24/09-40-56/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=150.csv\n",
       "outputs/2024-05-24/22-04-57/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=2_R=150.csv\n",
       "outputs/2024-05-25/11-33-25/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200.csv\n",
-      "outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200.csv\n"
+      "outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200_pretrained=True.csv\n",
+      "outputs/2024-05-28/21-19-12/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=50.csv\n",
+      "outputs/2024-05-28/15-00-28/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=1.csv\n"
      ]
     }
    ],
@@ -103,6 +118,7 @@
     "exp_files = glob.glob(f\"outputs/2024-05-*/*/*fedsimsiam*.csv\") \n",
     "\n",
     "print(len(exp_files))\n",
+    "# Imagenet prin to drop Test: Test-(70.19999999999999,0)\n",
     "for exp in exp_files:\n",
     "    print(exp)\n",
     "\n"
@@ -110,56 +126,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['outputs/2024-05-24/09-40-56/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=150.csv', 'outputs/2024-05-24/22-04-57/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=2_R=150.csv', 'outputs/2024-05-25/11-33-25/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200.csv', 'outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200_pretrained=True.csv']\n",
-      "outputs/2024-05-24/09-40-56/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=150.csv\n",
-      "Best accuracy on (accuracy,round):  \n",
-      "Test-(40.28,149)\n",
-      "outputs/2024-05-24/22-04-57/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=2_R=150.csv\n",
-      "Best accuracy on (accuracy,round):  \n",
-      "Test-(31.24,0)\n",
-      "outputs/2024-05-25/11-33-25/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200.csv\n",
-      "Best accuracy on (accuracy,round):  \n",
-      "Test-(43.48,194)\n",
+      "['outputs/2024-06-03/14-19-23/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=115.csv', 'outputs/2024-05-24/09-40-56/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=150.csv', 'outputs/2024-05-24/22-04-57/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=2_R=150.csv', 'outputs/2024-05-25/11-33-25/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200.csv', 'outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200_pretrained=True.csv']\n",
+      "5\n",
       "outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200_pretrained=True.csv\n",
       "Best accuracy on (accuracy,round):  \n",
-      "Test-(70.19999999999999,0)\n"
+      "Test-(70.19999999999999,0)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(64.96,1)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(61.63999999999999,2)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(58.720000000000006,7)\n"
      ]
     }
    ],
    "source": [
+    "# TODO: print ola\n",
     "exp_files2: list[str] = []\n",
-    "for R in [100, 150, 200]:\n",
-    "        exp_files2.extend(glob.glob(f\"outputs/2024-05-*/*/*fedsimsiam*R={R}*.csv\"))\n",
+    "for R in [100, 115, 150, 200]:\n",
+    "        exp_files2.extend(glob.glob(f\"outputs/2024-0*-*/*/*fedsimsiam*R={R}*.csv\"))\n",
     "        # print(exp_files2[-1])\n",
     "\n",
     "print(exp_files2)\n",
-    "# plot_summary_ssfl(exp_files2[2])\n",
+    "print(len(exp_files2))\n",
+    "# plot_summary_ssfl(exp_files2[-1])\n",
     "for f in exp_files2:\n",
     "        plot_summary_ssfl(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "outputs/2024-05-24/09-40-56/fedsimsiam_fedsimsiam_iid_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=150.csv\n"
+      "outputs/2024-05-25/23-07-54/fedsimsiam_fedsimsiam_dirichlet_alpha0.5_balanced_Classes=10_Seed=2024_C=5_fraction1_B=128_E=5_R=200_pretrained=True.csv\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(70.19999999999999,0)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(64.96,1)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(61.63999999999999,2)\n",
+      "Best accuracy on (accuracy,round):  \n",
+      "Test-(58.720000000000006,7)\n"
      ]
     }
    ],
    "source": [
-    "print(exp_files2[0])"
+    "# Imagenet pretrained=True\n",
+    "# plot_summary_ssfl(exp_files2[-1])\n",
+    "# Best accuracy on (accuracy,round):  \n",
+    "# Test-(70.19999999999999,0)\n",
+    "# Best accuracy on (accuracy,round):  \n",
+    "# Test-(64.96,1)\n",
+    "# Best accuracy on (accuracy,round):  \n",
+    "# Test-(61.63999999999999,2)\n",
+    "# Best accuracy on (accuracy,round):  \n",
+    "# Test-(58.720000000000006,7)"
    ]
   },
   {
